_cache/v0.18.0/berkeley-db/specs.md
---
title: "berkeley-db"
layout: cache
categories: [package, v0.18.0]
meta: {"versions": ["18.1.40"], "compilers": ["gcc@=7.5.0", "gcc@=8.4.0"], "oss": ["ubuntu18.04"], "platforms": ["linux"], "targets": ["x86_64"], "stacks": ["build_systems", "data-vis-sdk", "e4s", "radiuss", "root", "tutorial"], "num_specs": 2, "num_specs_by_stack": {"e4s": 1, "root": 2, "build_systems": 1, "tutorial": 2, "radiuss": 1, "data-vis-sdk": 1}}
spec_details: [{"hash": "q6tqmmmitkatscuadcwn6ea32iscs55k", "compiler": "gcc@=7.5.0", "versions": ["18.1.40"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["+cxx", "~docs", "patches=b231fcc", "+stl"], "stacks": ["e4s", "root", "build_systems", "tutorial", "radiuss", "data-vis-sdk"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.0/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/berkeley-db-18.1.40/linux-ubuntu18.04-x86_64-gcc-7.5.0-berkeley-db-18.1.40-q6tqmmmitkatscuadcwn6ea32iscs55k.spack"}, {"hash": "johvuo37ta4fvksrev2oim5wq4nkwba7", "compiler": "gcc@=8.4.0", "versions": ["18.1.40"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["+cxx", "~docs", "patches=b231fcc", "+stl"], "stacks": ["tutorial", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.0/build_cache/linux-ubuntu18.04-x86_64/gcc-8.4.0/berkeley-db-18.1.40/linux-ubuntu18.04-x86_64-gcc-8.4.0-berkeley-db-18.1.40-johvuo37ta4fvksrev2oim5wq4nkwba7.spack"}]
---