_cache/v0.18.1/berkeley-db/specs.md
---
title: "berkeley-db"
layout: cache
categories: [package, v0.18.1]
meta: {"versions": ["18.1.40"], "compilers": ["gcc@=7.3.1", "gcc@=7.5.0", "gcc@=8.4.0"], "oss": ["amzn2", "ubuntu18.04"], "platforms": ["linux"], "targets": ["aarch64", "graviton2", "x86_64", "x86_64_v3", "x86_64_v4"], "stacks": ["aws-ahug", "aws-ahug-aarch64", "aws-isc", "aws-isc-aarch64", "build_systems", "data-vis-sdk", "e4s", "radiuss", "root", "tutorial"], "num_specs": 6, "num_specs_by_stack": {"radiuss": 1, "build_systems": 1, "tutorial": 2, "root": 6, "data-vis-sdk": 1, "e4s": 1, "aws-isc": 2, "aws-ahug": 2, "aws-ahug-aarch64": 2, "aws-isc-aarch64": 2}}
spec_details: [{"hash": "q6tqmmmitkatscuadcwn6ea32iscs55k", "compiler": "gcc@=7.5.0", "versions": ["18.1.40"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["+cxx", "~docs", "patches=b231fcc", "+stl"], "stacks": ["radiuss", "build_systems", "tutorial", "root", "data-vis-sdk", "e4s"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/berkeley-db-18.1.40/linux-ubuntu18.04-x86_64-gcc-7.5.0-berkeley-db-18.1.40-q6tqmmmitkatscuadcwn6ea32iscs55k.spack"}, {"hash": "bmuizvmby2etri6hp3o4pfr5q6qi7u4x", "compiler": "gcc@=7.3.1", "versions": ["18.1.40"], "os": "amzn2", "platform": "linux", "target": "x86_64_v4", "variants": ["+cxx", "~docs", "patches=b231fcc", "+stl"], "stacks": ["root", "aws-isc", "aws-ahug"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-x86_64_v4/gcc-7.3.1/berkeley-db-18.1.40/linux-amzn2-x86_64_v4-gcc-7.3.1-berkeley-db-18.1.40-bmuizvmby2etri6hp3o4pfr5q6qi7u4x.spack"}, {"hash": "2jnmbv5gy2h3f3e5kc3ih5kcp3yv3gya", "compiler": "gcc@=7.3.1", "versions": ["18.1.40"], "os": "amzn2", "platform": "linux", "target": "graviton2", "variants": ["+cxx", "~docs", "patches=b231fcc", "+stl"], "stacks": ["aws-ahug-aarch64", "aws-isc-aarch64", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-graviton2/gcc-7.3.1/berkeley-db-18.1.40/linux-amzn2-graviton2-gcc-7.3.1-berkeley-db-18.1.40-2jnmbv5gy2h3f3e5kc3ih5kcp3yv3gya.spack"}, {"hash": "st5ncwxrh5ywhwlvg4ibchuoneswdmf4", "compiler": "gcc@=7.3.1", "versions": ["18.1.40"], "os": "amzn2", "platform": "linux", "target": "aarch64", "variants": ["+cxx", "~docs", "patches=b231fcc", "+stl"], "stacks": ["aws-ahug-aarch64", "aws-isc-aarch64", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-aarch64/gcc-7.3.1/berkeley-db-18.1.40/linux-amzn2-aarch64-gcc-7.3.1-berkeley-db-18.1.40-st5ncwxrh5ywhwlvg4ibchuoneswdmf4.spack"}, {"hash": "66t4vyqqclch3rxyxq3kpuiflsurcgm3", "compiler": "gcc@=7.3.1", "versions": ["18.1.40"], "os": "amzn2", "platform": "linux", "target": "x86_64_v3", "variants": ["+cxx", "~docs", "patches=b231fcc", "+stl"], "stacks": ["root", "aws-isc", "aws-ahug"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-x86_64_v3/gcc-7.3.1/berkeley-db-18.1.40/linux-amzn2-x86_64_v3-gcc-7.3.1-berkeley-db-18.1.40-66t4vyqqclch3rxyxq3kpuiflsurcgm3.spack"}, {"hash": "johvuo37ta4fvksrev2oim5wq4nkwba7", "compiler": "gcc@=8.4.0", "versions": ["18.1.40"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["+cxx", "~docs", "patches=b231fcc", "+stl"], "stacks": ["tutorial", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-8.4.0/berkeley-db-18.1.40/linux-ubuntu18.04-x86_64-gcc-8.4.0-berkeley-db-18.1.40-johvuo37ta4fvksrev2oim5wq4nkwba7.spack"}]
---